diffrent game lobbys

--- a/sankaskep/index.css
+++ b/sankaskep/index.css
@@ -46,3 +46,50 @@ body {
 #messages > li:nth-child(odd) {
     background: #efefef; 
 }
+
+
+
+
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.board {
+    display: grid;
+    grid-template-columns: repeat(10, 30px);
+    grid-template-rows: repeat(10, 30px);
+    gap: 2px;
+    margin-bottom: 20px;
+}
+  
+.cell {
+    width: 30px;
+    height: 30px;
+    background-color: rgb(70, 70, 139);
+    border: 1px solid #444;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+  
+.cell:hover {
+    background-color: #aaf;
+}
+
+
+h1{
+    text-align: center;
+}
+
+.btn-rooms{
+    height: 10vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.btn-rooms button{
+    height: 20%;
+}
